# packaging-estimator-portfolio

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.mind/: MEMORY.md  SESSION.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_prospects.py  003_add_bespoke_fit_fields.py
backend/: __init__.py
backend/app/: __init__.py  config.py  main.py  middleware.py
backend/core/: calculation_engine.py
config/: companies_key.tst
dashboard/: .gitignore  AUDIT_REPORT.md  Customer_Intelligence.py  KSP_Customer_Intelligence.py  README.md  requirements.txt  run.sh
dashboard/.streamlit/: secrets.toml.example
dashboard/components/: __init__.py  ui_components.py
dashboard/pages/: 1_Segment_Overview.py  2_Company_Explorer.py  3_Segment_Predictor.py  4_Marketing_Playbook.py
dashboard/services/: activity_tracker.py  data_loader.py  export_service.py  marketing_service.py  model_service.py  segment_service.py  unified_data_service.py
data/companies/: ch_cache.json  ch_deep_cache.json  company_features.csv  company_features_preprocessed.csv  company_features_processed_base.csv  customer_stats.csv  deep_features.csv  external_features.csv  feature_names.json  internal_features.csv  name_mapping.json  web_cache.json  web_features.csv
data/estimates/: financial_analysis_summary.md
data/materials/: pricing_model.csv
data/migrations/: materials.json  pricing_rules.json  seed_pricing_rules.sql
data/prospects/: scored_prospects.csv  scored_prospects_with_packaging.csv  test_prospects.csv
docs/: IMPLEMENTATION_TODO.md  MISSION.md  PDR.md  PRD.md  PROSPECT_SEARCH_MANUAL.md  ProspectIQ_PRD.md  lead_scoring_guide.md  sales_playbook.md
docs/ads_clustering/: Customer_Segmentation_Report.docx  README.md
docs/architecture/: ADVISOR_SYNTHESIS.md
docs/prospecting/: README.md
frontend/templates/: index.html  prospects.html
ml/data_pipeline/: feedback_collector.py
nginx/: nginx.conf
notebooks/: ads_clustering copy.py  ads_clustering.ipynb  ads_core_personas.csv  ads_core_subcluster.csv  ads_prospect_preprocessing.ipynb  bi_legacy.ipynb  bi_legacy_eda.ipynb  company_data_preprocessing.ipynb  customer_segmentation.ipynb  customer_segmentation_model.ipynb  enrich_analysis.ipynb  prospect_knn.ipynb
outputs/: prospect_analysis.md
scripts/: anonymization_mapping.json  anonymize_data.py  backup_db.sh  customer_api.py  customer_classifier.py  enrich_companies.py  generate_sales_report.py  migrate_pricing_model.py  preprocessing_custom.py  prospect_scorer.py  refine_legacy_extract.py  restore_db.sh  sales_dashboard.py  test_prospect_scorer.py  test_prospect_search.py  validate_company_names.py
tests/: __init__.py  test_prospect_scorer.py
(+77 files in other folders)
